# AgroClimaX

./: .gitignore  CLAUDE.md  railway.toml  render.yaml
apps/backend/: .env.example  .geojson_rivera.json  Dockerfile  data_fetcher.py  pyproject.toml  requirements.txt  server.py
apps/backend/.catalog_cache/: uy_departments_adm1.geojson
apps/backend/app/: bootstrap.py  main.py  worker.py
apps/backend/app/alerts/: engine.py  niveles.py
apps/backend/app/copernicus/: aoi.py  auth.py  era5.py  pipeline.py  sentinel1.py  sentinel2.py
apps/backend/app/core/: config.py  security.py
apps/backend/app/db/: session.py
apps/backend/app/models/: __init__.py  alerta.py  auth.py  farm.py  field_snapshot.py  field_video.py  humedad.py  materialized.py  pipeline.py  settings.py  user.py
apps/backend/scripts/: backfill_field_snapshots.py  cleanup_phantom_snapshots.py  seed_field_snapshots_mock.py
apps/backend/tasks/: pipeline_task.py
apps/backend/tests/: conftest.py  test_alert_subscriptions.py  test_analysis.py  test_aoi_tile_clip.py  test_api_contract.py  test_auth.py  test_business_settings.py  test_campos.py  test_establishments_viewer_smoke.py  test_field_features_l1_l5.py  test_field_scope.py  test_field_snapshots.py  test_field_video_real_frames.py  test_integration_fase_2_5.py  test_mcp_advanced_tools.py  test_mcp_full_suite.py  test_mcp_integration.py  test_notifications.py  test_preload_progress.py  test_preload_raster_products.py  test_productive_units.py  test_profile.py  test_public_api.py  test_raster_catalog.py  test_raster_config.py  test_sections.py  test_tile_cache.py  test_tileserver_contract.py
apps/mcp/: DEPLOY.md  Dockerfile  README.md  claude_desktop_config.example.json  pyproject.toml  railway.toml  server.py  smoke_test.py
(+118 files in other folders)
