[tool.poetry]
name = "agroclimax-backend"
version = "0.1.0"
description = "AgroClimaX — Sistema de Alertas Agroclimáticas por Teledetección, Rivera Uruguay"
authors = ["AI Deep Economics"]
python = "^3.12"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.30"}
asyncpg = "^0.29.0"
alembic = "^1.13.1"
pydantic = {extras = ["email"], version = "^2.7.1"}
pydantic-settings = "^2.2.1"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.0.4"
httpx = "^0.27.0"
# Datos y ciencia
numpy = "^1.26.4"
pandas = "^2.2.2"
scipy = "^1.13.0"
scikit-learn = "^1.4.2"
# Geoespacial
geopandas = "^0.14.4"
shapely = "^2.0.4"
pyproj = "^3.6.1"
rasterio = "^1.3.10"
xarray = "^2024.6.0"
rioxarray = "^0.15.5"
# Copernicus / Sentinel Hub
sentinelhub = "^3.10.2"
cdsapi = "^0.7.2"
# Notificaciones
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
aiosmtplib = "^3.0.1"

[tool.poetry.dev-dependencies]
pytest = "^8.2.1"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
