[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agroclimax-mcp"
version = "0.1.0"
description = "FastMCP server exposing AgroClimaX backend tools"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.0",
]

[tool.setuptools]
py-modules = ["server"]
